--- a/maler/css/base.css
+++ b/maler/css/base.css
@@ -3,32 +3,63 @@ html, body {
 }
 
 :root {
-  --screen-max: 1000px;
+  --screen-max: 1200px;
+  --base-fontM: 'Montserrat', sans-serif;
+  --base-fontP: 'Pridi', 'Times New Roman', sans-serif;
+  --grey-light: #fefefe;
+  --grey-dark: #525252;
+  --grey: #696969;
+
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url(../fonts/Roboto-Regular.ttf);
+  font-family: 'Montserrat';
+  src: url(../fonts/Montserrat-Regular.ttf);
   font-weight: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url(../fonts/Roboto-Bold.ttf);
+  font-family: 'Montserrat';
+  src: url(../fonts/Montserrat-Bold.ttf);
   font-weight: bold;
 }
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../fonts/Montserrat-Light.ttf);
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'Pridi';
+  src: url(../fonts/Pridi-Regular.ttf);
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Pridi';
+  src: url(../fonts/Pridi-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Pridi';
+  src: url(../fonts/Pridi-Light.ttf);
+  font-weight: lighter;
+}
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--base-fontM);
+  /* font-family: 'Roboto', sans-serif; */
   font-size: 100%;
-  font-weight: bold;
+  background: var(--grey);
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
 }
-
 
 html * {
   box-sizing: border-box;
-
 }
 
 header {
@@ -37,23 +68,24 @@ header {
   height: 45vw;
   background: rgb(33, 91, 80);
   overflow: hidden;
-
+  font-family: var(--base-fontM);
+  font-size: 20px;
+  font-weight: bold;
+  /*text-shadow: 4px 4px 4px rgba(27, 23, 28, 0.7);*/
 }
 header img {
-
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
   display: block;
-
 }
 
 header .inner-wrapper {
-  position: relative;
-  max-width: var(screen-max);
+  position: absolute;
+  width: 100%;
   margin: 0 auto;
-  background: red;
+  text-align: left;
 }
 
 header h1
@@ -61,19 +93,52 @@ header h1
   position: absolute;
   bottom: 0;
   left: 0;
-  background: green;
   width: 100%;
   padding: 1%;
-  text-align: center;
-
-
-
 }
 
 main {
+  flex: 1;
   background: lightgrey;
 }
 
 footer {
+  font-family: var(--base-fontP);
   background: rgb(89, 84, 75);
+  font-size: 15px;
+}
+
+footer .footer-top {
+  display: flex;
+}
+
+footer .footer-left {
+  flex: 1;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+footer .footer-right {
+  flex: 1;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+footer a {
+  font-family: var(--base-fontP);
+  text-decoration: none;
+  color: var(--grey-light);
+}
+
+footer .footer-bottom {
+color: var(--grey-dark);
+font-size: 12px;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+li {
+  background:none;
 }
