--- a/maler/css/base.css
+++ b/maler/css/base.css
@@ -1,17 +1,11 @@
-html, body {
-  margin: 0;
-}
-
 :root {
-  --screen-max: 1200px;
+  --screen-max: 1300px;
   --base-fontM: 'Montserrat', sans-serif;
   --base-fontP: 'Pridi', 'Times New Roman', sans-serif;
   --grey-light: #fefefe;
   --grey-dark: #525252;
   --grey: #696969;
-
 }
-
 @font-face {
   font-family: 'Montserrat';
   src: url(../fonts/Montserrat-Regular.ttf);
@@ -48,32 +42,64 @@ html, body {
   font-weight: lighter;
 }
 
+html, body {
+  margin: 0;
+}
+
 body {
   font-family: var(--base-fontM);
   font-size: 100%;
-  background: orange;
+  background: var(--grey);
   display: flex;
   flex-flow: column;
   min-height: 100vh;
 }
 
-
-
 html * {
   box-sizing: border-box;
+}
+
+#logo {
+  position: fixed;
+  z-index: 100;
+  top: 100;
+  left: 5em;
+  width: 5em;
+  height: 5em;
+}
+#logo a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: var(--grey-dark) url('../img/logo_muthwill.svg') no-repeat;
+  background-size: contain;
+  text-indent: -9999em;
+  overflow: hidden;
+}
+
+#logo-part-2 {
+  position: absolute;
+  top: 0;
+  left: 10em;
+  width: 9em;
+  height: 5em;
+}
+
+#logo-part-2 a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 }
 
 header {
   position: relative;
   width: 100%;
   height: 45vw;
-  background: rgb(33, 91, 80);
+  /* background: lightgreen; */
   overflow: hidden;
-  font-family: var(--base-fontM);
-  font-size: 20px;
-  font-weight: bold;
-  /*text-shadow: 4px 4px 4px rgba(27, 23, 28, 0.7);*/
 }
+
 header img {
   width: 100%;
   height: 100%;
@@ -82,11 +108,21 @@ header img {
   display: block;
 }
 
-header .inner-wrapper {
-  position: absolute;
-  width: 100%;
+header .inner-wrapper,
+footer .inner-wrapper {
+  position: relative;
+  max-width: var(--screen-max);
   margin: 0 auto;
-  text-align: left;
+  font-family: var(--base-fontP);
+  font-weight: lighter;
+}
+
+header .inner-wrapper1 {
+  /*position: top;*/
+  max-width: var(--screen-max);
+  margin: 0 auto;
+  font-family: var(--base-fontM);
+  font-weight: lighter;
 }
 
 header h1
@@ -94,8 +130,23 @@ header h1
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  padding: 1%;
+  color: white;
+}
+
+header h2
+{ bottom: 0;
+  left: 0;
+  color: white;
+  font-family: var(--base-fontM);
+  font-size: 22px;
+}
+
+header h3
+{ bottom: 0;
+  left: 0;
+  color: white;
+  font-family: var(--base-fontM);
+  font-size: 18px;
 }
 
 main {
@@ -104,9 +155,20 @@ main {
 }
 
 footer {
+  background: var(--grey-dark);
+}
+
+footer a {
   font-family: var(--base-fontP);
-  background: rgb(89, 84, 75);
-  font-size: 15px;
+  text-decoration: none;
+  color: var(--grey-light);
+  text-transform: uppercase;
+}
+
+footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 footer .footer-top {
@@ -118,20 +180,11 @@ footer .footer-left {
 footer .footer-right {
 }
 
-footer a {
-  font-family: var(--base-fontP);
-  text-decoration: none;
-  color: var(--grey-light);
-  text-transform: uppercase;
-}
-
 footer .footer-bottom {
-color: var(--grey-dark);
-font-size: 12px;
-}
-
-footer ul {
-  list-style-type: none;
+max-width: var(--screen-max);
+margin: 0 auto;
+color: var(--grey-light);
+opacity: .15;
 }
 
 li {
@@ -142,10 +195,12 @@ li {
   footer .footer-top {
      display: flex;
   }
+
   footer .footer-left,
   footer .footer-right {
      flex: 1;
   }
+
   footer .footer-right {
      text-align: right;
   }
@@ -158,4 +213,49 @@ li {
 }
 
 @media screen and (min-width: 1200px) {
+}
+
+section .content-element {
+  display: block;
+  background: purple;
+  position: relative;
+}
+
+.content-element .teaser {
+  position: relative;
+  /* max-width: var(--screen-max); */
+  margin: 0 auto;
+  color: white;
+  font-size: 15px;
+
+  background:
+  -webkit-linear-gradient(rgba(255,125,0,0.5),rgba(255,125,0,0.5)),
+  url(img_01.jpg);
+
+ background:
+  linear-gradient(rgba(255, 100, 1, 0.98),rgba(152, 84, 14,0.8)),
+  url(../img/img_01.jpg);
+
+  background-size: cover;
+  height: 35vw;
+}
+
+.content-element .teaser p {
+  position: relative;
+  z-index: 10;
+  font-family: var(--base-fontM);
+  font-weight: lighter;
+  /* padding-right: 45%; */
+}
+
+.content-element a.button {
+  display: inline-block;
+  padding 1em 2em;
+  background: orange;
+  color: white;
+  text-decoration: none;
+}
+
+.content-element a.button.hover {
+  opacity: .6;
 }
