--- a/maler/css/base.css
+++ b/maler/css/base.css
@@ -1,5 +1,5 @@
 :root {
-  --screen-max: 1100px;
+  --screen-max: 1200px;
   --base-font: 'Montserrat', sans-serif;
   --base-font2: 'Pridi', 'Times New Roman', serif;
 
@@ -8,7 +8,8 @@
   --grey: #696969;
 
   --font-color-light: var(--grey-dark);
-  --main-padding: 20px;
+
+  --main-padding: 30px;
 }
 
 @font-face {
@@ -72,12 +73,8 @@ html * {
 }
 
 #logo {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 5em;
-  width: 7em;
-  height: 7em;
+  width: 5rem;
+  height: 5rem;
 }
 #logo a {
   display: block;
@@ -93,9 +90,11 @@ html * {
   position: absolute;
   z-index: 100;
   top: 0;
-  left: 12em;
-  width: 17em;
-  height: 7em;
+  left: 5rem;
+  width: auto;
+  height: 5rem;
+  background: transparent;
+  display: block;
 }
 
 #logo-part-2 a {
@@ -107,7 +106,7 @@ html * {
   text-transform: uppercase;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 1rem;
   font-size: 1.3rem;
   line-height: 1em;
   font-weight: 500;
@@ -140,15 +139,17 @@ footer .inner-wrapper {
   position: relative;
   max-width: var(--screen-max);
   margin: 0 auto;
-  font-family: var(--base-font);
 }
 
 header#main-header h1 {
-  font-size: 48px;
   position: absolute;
   left: 0;
   bottom: 0;
-  background: none;
+  font-family: 'Pridi', Geordia, serif;
+  font-weight: lighter;
+  font-size: 9vw;
+  line-height: 1.2em;
+  text-transform: uppercase;
 }
 
 main {
@@ -156,6 +157,7 @@ main {
 }
 
 footer {
+  margin-top: 2rem;
   background: var(--grey-dark);
 }
 
@@ -173,26 +175,42 @@ footer ul {
 }
 
 footer .footer-top {
-
+  margin: 2rem auto 0;
 }
 
-footer .footer-left {
-}
-
-footer .footer-right {
-}
 
 footer .footer-bottom {
   color: var(--grey-light);
   opacity: .15;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 480px) {
+  #logo {
+      width: 7rem;
+      height: 7rem;
+  }
+
+  #logo-part-2 {
+    left: 7rem;
+    height: 7rem;
+  }
+
+  #logo-part-2 a {
+    padding: 2rem;
+  }
 
 }
 
 
 @media screen and (min-width: 576px) {
+
+  header#main-header h1 {
+    font-size: 3.5rem;
+  }
 
   footer .footer-top {
     display: flex;
@@ -217,6 +235,35 @@ footer .footer-bottom {
 
 }
 
+
+@media screen and (max-width: 1250px) {
+  footer .footer-left {
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
+  }
+
+  footer .footer-right {
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
+  }
+
+  .footer-bottom {
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
+  }
+}
+
+
 @media screen and (min-width: 1200px) {
+  #logo {
+      position: fixed;
+      z-index: 100;
+      top: 0;
+      left: 5rem;
+  }
+  #logo-part-2 {
+    width: 17rem;
+    left: 12rem;
+  }
 
 }
