--- a/maler/css/content-element.css
+++ b/maler/css/content-element.css
@@ -3,6 +3,15 @@ section.content-element {
   position: relative;
 }
 
+.content-element h2.content-header {
+  font-family: 'Pridi', sans-serif;
+  font-size: 9.5vw;
+  line-height: 1.2em;
+  font-weight: lighter;
+  text-transform: uppercase;
+  word-break: break-word;
+}
+
 .content-element .teaser {
   position: relative;
   background-size: cover;
@@ -12,6 +21,19 @@ section.content-element {
 .content-element .teaser p {
   position: relative;
   z-index: 10;
+}
+
+.content-element img {
+  max-width: 100%;
+}
+
+.content-element .teaser img {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center top;
 }
 
 .content-element .content-text img {
@@ -32,15 +54,49 @@ section.content-element {
 }
 
 @media screen and (min-width: 576px)  {
+
+  .content-element h2.content-header {
+    font-size: 3.5rem;
+  }
+
+  .content-element .teaser {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+  }
+
   .content-element .teaser p,
   .content-element .content-text p {
     padding-right: 45%;
   }
+
+  .content-element .teaser img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: -1;
+  }
+
+}
+
+@media screen and (max-width: 1250px) {
+
+  header#main-header h1,
+  .content-element > header,
+  .content-element .teaser .inner-wrapper,
+  .content-element .content-text {
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
+  }
+
 }
 
 @media screen and (min-width: 1200px)  {
+
   .content-element .teaser {
     min-height: none;
     max-height: 40rem;
   }
+
 }
