--- a/california/css/content-element.css
+++ b/california/css/content-element.css
@@ -4,13 +4,11 @@ section.content-element {
 }
 
 .content-element h2.content-header {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;;
+  font-family: 'Pridi', sans-serif;
+  font-size: 9.5vw;
   line-height: 1.2em;
   font-weight: lighter;
-  valign: center;
-
-  /* text-transform: uppercase; */
+  text-transform: uppercase;
   word-break: break-word;
 }
 
