--- a/california/css/content-element.css
+++ b/california/css/content-element.css
@@ -4,11 +4,13 @@ section.content-element {
 }
 
 .content-element h2.content-header {
-  font-family: 'Pridi', sans-serif;
-  font-size: 9.5vw;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;;
   line-height: 1.2em;
   font-weight: lighter;
-  text-transform: uppercase;
+  valign: center;
+
+  /* text-transform: uppercase; */
   word-break: break-word;
 }
 
