--- a/california/css/base.css
+++ b/california/css/base.css
@@ -1,5 +1,5 @@
 :root {
-  --screen-max: 1200px;
+  --screen-max: 1000px;
   --fontM: 'Montserrat', sans-serif;
   --fontO: 'OpenSans', sans-serif;
 }
@@ -49,6 +49,7 @@ html * {
   text-decoration: none;
 }
 
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
@@ -74,6 +75,13 @@ html * {
   width: 280px;
 }
 
+.grid-item-img1 img:hover {
+
+   transform: rotate(-4deg);
+   -webkit-transform: rotate(-4deg);
+   -ms-transform: rotate(-4deg);
+}
+
 .grid-item-img1 li {
   color: black;
   font-family: var(--fontM);
@@ -92,7 +100,26 @@ html * {
   }
 
 
-  
+
+.gallery {
+    display: flex;
+    padding: 0;
+}
+
+.gallery img {
+    margin-top: 0;
+    vertical-align: middle;
+	  width: 25%;
+	  height: 25%;
+}
+
+
+.gallery img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+
+
 header#main-header {
   position: relative;
   width: 100%;
@@ -132,6 +159,13 @@ header#main-header-center {
   color: black;
 }
 
+header#main-header .inner-wrapper,
+.content-element .inner-wrapper,
+footer .inner-wrapper {
+  position: relative;
+  max-width: var(--screen-max);
+  margin: 0 auto;
+}
 
 main {
   flex: 1;
@@ -158,7 +192,6 @@ footer ul {
 footer .footer-top {
   margin: 2rem auto 0;
 }
-
 
 footer .footer-bottom {
   color: rgb(180, 180, 180);
