--- a/california/css/base.css
+++ b/california/css/base.css
@@ -1,63 +1,29 @@
 :root {
-  --screen-max: 1200px;
-  --base-font: 'Montserrat', sans-serif;
-  --base-font2: 'Pridi', 'Times New Roman', serif;
-
-  --grey-light: #fefefe;
-  --grey-dark: #525252;
-  --grey: #696969;
-
-  --font-color-light: var(--grey-dark);
-
-  --main-padding: 30px;
+  --screen-max: 1000px;
+  --fontM: 'Montserrat', sans-serif;
+  --fontO: 'OpenSans', sans-serif;
 }
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url(../fonts/Montserrat-Regular.ttf);
-    font-weight: normal;
-}
+/* Font fontM Montserrat */
+@font-face {font-family: 'Montserrat'; src: url(../fonts/Montserrat-Bold.ttf); font-weight: bolder;}
+@font-face {font-family: 'Montserrat'; src: url(../fonts/Montserrat-Regular.ttf); font-weight: normal;}
+@font-face {font-family: 'Montserrat'; src: url(../fonts/Montserrat-Medium.ttf); font-weight: Medium;}
+@font-face {font-family: 'Montserrat'; src: url(../fonts/Montserrat-Light.ttf); font-weight: lighter;}
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url(../fonts/Montserrat-Medium.ttf);
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url(../fonts/Montserrat-Bold.ttf);
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url(../fonts/Montserrat-Light.ttf);
-    font-weight: lighter;
-}
-
-@font-face {
-    font-family: 'Pridi';
-    src: url(../fonts/Pridi-Regular.ttf);
-    font-weight: normal;
-}
-@font-face {
-    font-family: 'Pridi';
-    src: url(../fonts/Pridi-Bold.ttf);
-    font-weight: bold;
-}
-@font-face {
-    font-family: 'Pridi';
-    src: url(../fonts/Pridi-Light.ttf);
-    font-weight: lighter;
-}
+/* Font fontO OpenSans */
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-Bold.ttf); font-weight: bolder;}
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-Light.ttf); font-weight: lighter;}
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-LightItalic.ttf); font-weight:lighter; font-style: italic;}
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-Regular.ttf); font-weight: normal;}
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-SemiBold.ttf); font-weight: bold;}
+@font-face {font-family: 'OpenSans'; src: url(../fonts/OpenSans-SemiBoldItalic.ttf); font-weight: bold; font-style: italic;}
 
 html, body {
   margin: 0;
 }
 
 body {
-  font-family: var(--base-font);
+  font-family: var(--fontM);
   font-size: 100%;
   display: flex;
   flex-flow: column;
@@ -68,22 +34,21 @@ html * {
   box-sizing: border-box;
 }
 
-
 .main-navigation li {
   display: inline-block;
-   color: white;
-   /* text-align: center; */
-   padding: 16px;
-   text-decoration: none;
+  color: white;
+  padding: 15px;
+  text-decoration: none;
 }
 
 .main-navigation a {
   color: black;
-  font-family: 'Montserrat';
-  font-weight: bold;
+  font-family: var(--fontM);
+  font-weight: bolder;
   font-style: normal;
   text-decoration: none;
 }
+
 
 .grid-container {
   display: grid;
@@ -94,8 +59,65 @@ html * {
   background-color: white;
   text-align: left;
   padding: 0 0;
-  font-size: 20px;
+  font-size: 1em;
 }
+
+.grid-container-img1 {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.grid-item-img1 img{
+  position: relative;
+  background: white;
+  overflow: hidden;
+  padding: 0px;
+  width: 280px;
+}
+
+.grid-item-img1 img:hover {
+
+   transform: rotate(-4deg);
+   -webkit-transform: rotate(-4deg);
+   -ms-transform: rotate(-4deg);
+}
+
+.grid-item-img1 li {
+  color: black;
+  font-family: var(--fontM);
+  font-weight: bolder;
+  font-style: normal;
+  padding: 0px;
+  }
+
+.grid-item-img1 a {
+    color: red;
+    font-family: var(--fontM);
+    font-weight: lighter;
+    font-style: normal;
+    font-size: 12px;
+    text-decoration: underline;
+  }
+
+
+.gallery {
+    display: flex;
+    padding: 0;
+}
+
+.gallery img {
+    margin-top: 0;
+    vertical-align: middle;
+	  width: 25%;
+	  height: 25%;
+}
+
+
+.gallery img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+
 
 header#main-header {
   position: relative;
@@ -103,32 +125,45 @@ header#main-header {
   height: 45vw;
   background: white;
   overflow: hidden;
-  padding: 20px;
+  padding: 0px;
 }
 
 header#main-header img {
   width: 100%;
-  height: 100%;
+  height: 95%;
   object-fit: cover;
   object-position: center;
   display: block;
 }
 
-header#main-header .inner-wrapper {
-
-  max-width: var(--screen-max);
-  margin: 0 auto;
+header#main-header div {
+  position: absolute;
+  left: 30%;
+  top: 40%;
+  font-family: var(--fontM);
+  font-weight: normal;
+  font-size: 0.6em;
+  line-height: 1em;
+  text-transform: none;
+  color: white;
 }
 
-header#main-header h1 {
-  position: absolute;
-  left: 100px;
-  bottom: 200px;
-  font-family: 'Montserrat', serif;
-  font-weight: lighter;
-  font-size: 20px;
-  text-transform: uppercase;
-  color: white;
+
+header#main-header-center {
+  /*padding: 20px; */
+  font-family: var(--fontM);
+  font-weight: bolder;
+  font-size: 1.2em;
+  /* line-height: 1.2em; */
+  color: black;
+}
+
+header#main-header .inner-wrapper,
+.content-element .inner-wrapper,
+footer .inner-wrapper {
+  position: relative;
+  max-width: var(--screen-max);
+  margin: 0 auto;
 }
 
 main {
@@ -137,14 +172,14 @@ main {
 
 footer {
   margin-top: 2rem;
-  background: var(--grey-dark);
+  background: rgb(66,66,66);
 }
 
 footer a {
-  color: var(--grey-light);
-  font-family: var(--base-font2);
-  text-decoration: none;
-  text-transform: uppercase;
+  color: rgb(200,200,200);
+  font-family: var(--fontO);
+  text-decoration: underline;
+  text-transform: none;
 }
 
 footer ul {
@@ -157,14 +192,14 @@ footer .footer-top {
   margin: 2rem auto 0;
 }
 
-
 footer .footer-bottom {
-  color: var(--grey-light);
-  opacity: .15;
+  color: rgb(180, 180, 180);
+  background-color: rgb(32, 32, 32);
+  /* opacity: .15;*/
   margin-top: 2rem;
   margin-bottom: 2rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 @media screen and (min-width: 480px) {
